# MSFS-MCP

./: .env.example  .gitignore  CONNECTING.md  HANDOFF.md  README.md  msfs-companion.conf.example  pyproject.toml  requirements.txt  run-checklist.cmd  run-controls.cmd
checklist/: README.md
checklist/efbchecklist/: __init__.py  app.py  models.py  theme.py
checklist/efbchecklist/data/: c172s.json  pa28_181.json
scripts/: diag_hid.py  smoke_test.py
src/checklist_app/: README.md  __init__.py  app.py  debrief.py  debrief_dialog.py  flight_log.py  models.py  sim_link.py  theme.py  verify.py
src/checklist_app/data/: c172s.json  pa28_181.json
src/companion_common/: __init__.py  claude.py  config.py  llm.py  sim_link.py  theme.py
src/controls_app/: README.md  __init__.py  advisor.py  app.py  binding_check.py  bindings.py  device_views.py  devices.py  hid_input.py  input_map.py  input_monitor.py  msfs_profiles.py  settings_registry.py  sim_bridge.py  verify_dialog.py
src/controls_app/data/plans/: c172s.json  pa28_181.json
src/msfs_mcp/: __init__.py  autostart.py  catalog.py  config.py  fsuipc_client.py  memory_client.py  server.py  simconnect_client.py
tests/: test_autostart.py  test_binding_check.py  test_catalog.py  test_checklist_data.py  test_config.py  test_controls_data.py  test_device_views_smoke.py  test_flight_log.py  test_hid_input.py  test_input_map.py  test_llm.py  test_msfs_profiles.py  test_sim_bridge.py  test_verify.py
