[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msfs2024-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Microsoft Flight Simulator 2024 (SimConnect + FSUIPC7 + raw memory)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.2.0",
    "SimConnect>=0.4.26",
    "fsuipc>=2.0.0",
    "pymem>=1.13.1",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
checklist = ["PyQt6>=6.6"]
controls = ["PyQt6>=6.6", "anthropic>=0.40", "pygame>=2.5"]

[project.scripts]
msfs-mcp = "msfs_mcp.server:main"

[project.gui-scripts]
msfs-checklist = "checklist_app.app:main"
msfs-controls = "controls_app.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
checklist_app = ["data/*.json"]
controls_app = ["data/plans/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
