[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msfs2024-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Microsoft Flight Simulator 2024 (SimConnect + FSUIPC7 + raw memory)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.2.0",
    "SimConnect>=0.4.26",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
# Optional MCP server transports beyond SimConnect: the FSUIPC7 offset layer and
# the raw-memory escape hatch. Both are imported lazily and degrade gracefully
# when absent, so they are NOT required to run the server or the GUI apps.
# (The 'fsuipc' PyPI package tops out at 1.x — there is no 2.x.)
transports = ["fsuipc>=1.3", "pymem>=1.13.1"]
checklist = ["PyQt6>=6.6", "anthropic>=0.40"]
controls = ["PyQt6>=6.6", "anthropic>=0.40", "pygame>=2.6"]
# For MSFS_COMPANION_LLM=openai or =local (Ollama / LM Studio / llama.cpp, all
# OpenAI-compatible). The anthropic provider (default) does not need this.
openai = ["openai>=1.30"]

[project.scripts]
msfs-mcp = "msfs_mcp.server:main"

[project.gui-scripts]
msfs-checklist = "checklist_app.app:main"
msfs-controls = "controls_app.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
checklist_app = ["data/*.json"]
controls_app = ["data/plans/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
